  with D-bus optional at compile time. This feature is
  enabled by compiling with WANT_SYSTEMD defined.
- Migrated Debian testsuite into the "tests" directory.
- Fixed typo in warning messages.
- Cause Makefile to create link needed for testing in "tests"
  directory when building insserv. Running distclean removes
  link to avoid cluttering archive.

-------------------------------------------------------------------
October 2018 - jsmith@resonatingmedia.com

- Added ability to run --dry-run and --show-all in addition to
  the existing --dryrun and --showall options.
  Closes Debian bug #580773
- Fixed compiler warnings when unused variables are defined in listing.h


-------------------------------------------------------------------
August 2018 - jsmith@resonatingmedia.com

- Updated insserv.c and listing.h to fix compile errors.
- Fixed Makefile so that all source dependencies are found.
- Allow CC to be defined outside of Makefile so we are not tied to GCC.
- Fixed function definitions, moved code (map_ functions) used in multiple 
  places out of insserv.c and into its own module called map.c
  Makes it easier to fix Makefile to build with modern systems/compilers.
- Cleaned up the last of the compiler errors on Clang and almost all the
  warnings from GCC.

-------------------------------------------------------------------
Sun Feb 16 19:16:10 CET 2014 - pere@hungry.com

- Next release will be 1.17.0.
- Correct manual page, refer to init(8), not nonexisting init(7).
- Fix scope after if test to match the indentation and probably the
  intended behaviour.  Patch from Debian fixing BTS #736479.
- Remove useless test checking for NULL==serv which is impossible
  after a while test check it (Coverity CID 1174105).
- Check exit value from mkdir() and report an error if it fail
  (Coverity CID 1174104).
- Make sure to check the return value from ftello() before passing it
  to posix_fadvise() (Coverity CID 1174109).